--- a/Services.html
+++ b/Services.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Services</title>
   <style>
+    /* General Styles */
     body {
       font-family: Arial, sans-serif;
       margin: 0;
@@ -15,15 +18,35 @@
       padding: 20px;
       text-align: center;
     }
+
+    .logo {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      position: absolute;
+      top: 20px;
+      left: 20px;
+    }
+
     .logo img {
       height: auto;
-      max-width: 10%;
+      max-width: 50px;
       border-radius: 50%;
-      margin-right: 60%;
-}
+      margin-right: 10px;
+    }
+
+    .logo h2 {
+      margin: 0; /* Remove default margin */
+      font-size: 1.5rem; /* Adjust font size */
+    }
+
+    h2 {
+      margin: 0; /* Remove default margin */
+    }
+
     nav {
       background-color: #f2f2f2;
-      padding: 20px;
+      padding: 10px 0; /* Adjust padding */
       text-align: center;
     }
 
@@ -34,8 +57,8 @@
     }
 
     nav ul li {
-      display: inline;
-      margin-right: 35px;
+      display: inline-block; /* Changed to inline-block for better spacing */
+      margin-right: 15px; /* Adjust as needed */
     }
 
     nav ul li a {
@@ -45,33 +68,37 @@
     }
 
     section {
-      padding: 150px;
+      padding: 20px;
       text-align: center;
+      display: flex;
+      flex-wrap: wrap; /* Allow flex items to wrap */
+      justify-content: center;
     }
 
     .service-card {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
+      width: 300px; /* Set card width */
+      margin: 20px;
+      padding: 20px;
       border: 1px solid #ccc;
       border-radius: 5px;
-      padding: 20px;
-      margin-bottom: 20px;
+      text-align: left;
     }
 
     .service-card img {
-      width: 200px;
-      height: 200px;
-      object-fit: cover;
+      width: 100%; /* Full width for images */
+      height: auto; /* Maintain aspect ratio */
+      border-radius: 5px;
       margin-bottom: 10px;
     }
 
-    .service-card h2 {
+    .service-card h1 {
       margin-bottom: 10px;
+      font-size: 1.5em; /* Larger font size */
     }
 
     .service-card p {
       margin-bottom: 10px;
+      font-size: 0.9em; /* Smaller font size */
     }
 
     .service-card button {
@@ -80,6 +107,7 @@
       background-color: #333;
       color: #fff;
       cursor: pointer;
+      transition: background-color 0.3s ease;
     }
 
     .service-card button:hover {
@@ -92,27 +120,52 @@
       padding: 20px;
       text-align: center;
     }
+
     .social-media a {
       color: #fff;
       text-decoration: none;
       margin: 0 10px;
     }
-    h2{text-size-adjust: 1px;
-    margin-right:750px;
+
+    .social-media img {
+      width: 40px; /* Adjust size of social icons */
+      height: 40px;
+      border-radius: 50%;
+      margin-right: 5px;
     }
+
     .qr-codes-footer img {
-            width: 200px;
-            height: 250px;
-            margin: 0 10px;
-            margin-left: 1000px ;
+      width: 100px; /* Adjust size of QR codes */
+      height: auto;
+      margin: 10px;
     }
-    .social-media img, .contact-us img {
-            width: 80px;
-            height: 80px;
-            vertical-align: middle;
-            margin-right: 5px;
-            border-radius: 50%;
-        }
+
+    /* Responsive Design */
+    @media (max-width: 768px) {
+      .logo {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .logo img {
+        max-width: 30px;
+        margin-right: 0;
+      }
+
+      .logo h2 {
+        font-size: 1.2rem;
+      }
+
+      nav ul li {
+        display: block;
+        margin-bottom: 10px; /* Adjust spacing */
+      }
+
+      .service-card {
+        width: calc(100% - 40px); /* Full width with margin */
+        margin: 10px 20px;
+      }
+    }
   </style>
   <link rel="icon" type="image/png" href="favicon.jpeg">
 </head>
@@ -120,8 +173,10 @@
   <header>
     <div class="logo">
       <img src="Logo.png" alt="Gize Gebeya logo">
-      <H2>GIZE GEBEYA</H2>
-  </div>
+      <h2>GIZE GEBEYA</h2>
+    </div>
+    <br>
+    <br>
     <h1>Services</h1>
     <p>Explore Our Services</p>
   </header>
@@ -147,9 +202,7 @@
     <div class="service-card">
       <img src="LUXURY CAR.jpg" alt="Service 2">
       <h1>Service 2</h1>
-      <p>At GIZE GEBEYA, we are proud to offer the perfect services for all your car selling needs. Our knowledgeable team of automotive experts work diligently to ensure a seamless and successful sales process for our clients. From accurately appraising your vehicle's value and crafting a strategic marketing plan, to handling all negotiations and paperwork, we guide you through every step with unparalleled care and expertise. Our proven track record of securing top-dollar offers andfast turnaround times has made us the go-to choice for individuals looking to sell their cars quickly and for the best price. When you partner with [Company Name], you can have complete peace of mind knowing your vehicle is in the hands of true professionals committed to delivering the perfect car sale experience. Let us demonstrate how our exceptional services can maximize the return on your automotive asset.
-
-      </p>
+      <p>At GIZE GEBEYA, we are proud to offer the perfect services for all your car selling needs. Our knowledgeable team of automotive experts work diligently to ensure a seamless and successful sales process for our clients. From accurately appraising your vehicle's value and crafting a strategic marketing plan, to handling all negotiations and paperwork, we guide you through every step with unparalleled care and expertise. Our proven track record of securing top-dollar offers and fast turnaround times has made us the go-to choice for individuals looking to sell their cars quickly and for the best price. When you partner with [Company Name], you can have complete peace of mind knowing your vehicle is in the hands of true professionals committed to delivering the perfect car sale experience. Let us demonstrate how our exceptional services can maximize the return on your automotive asset.</p>
       <button>Learn More</button>
     </div>
 
@@ -163,13 +216,13 @@
     <div class="service-card">
       <img src="service4.jpg" alt="Service 4">
       <h1>Service 4</h1>
-      <p>LWe Are Planning A New Big Surprise</p>
+      <p>We Are Planning A New Big Surprise</p>
       <button>Learn More</button>
     </div>
   </section>
 
   <footer>
-    <p>Contact us at: Phone: +251978906766/+251973126041 | Email: gizegebeyacompany@gmail.com</p>
+    <p>Contact us at: Phone: +251978906766 / +251973126041 | Email: gizegebeyacompany@gmail.com</p>
     <section>
       <div class="social-media">
         <a href="#" class="social-icon"><img src="Youtube.png" alt="YouTube"></a>
@@ -178,15 +231,16 @@
         <a href="https://www.instagram.com/gizegebeya?igsh=bnVqdHNseXdqNDg=" class="social-icon"><img src="INSTAGRAM.jpg" alt="instagram"></a>
         <a href="https://www.facebook.com/profile.php?id=61550732175981" class="social-icon"><img src="FACEBOOK.png" alt="facebook"></a>
         <a href="https://t.me/gizegebeyasale" class="social-icon"><img src="Telegram channel.jpg" alt="Telegram"></a>
-   
-      <a href="gizegebeyacompany@gmail.com" class="social-icon"><img src="GMAIL.png" alt="gmail"></a>
-      <a href="https://t.me/gizegebeyacompany" class="social-icon"><img src="Telegram.jpg" alt="TELEGRAM"></a>
-    </div>
-   <div class="qr-codes-footer">
-      <a href="https://gizegebeya.github.io/Gize-Gebeya-Customer-s-website/">
-      <img src="QR CODE FOR CUSTOMERS.png" alt="qrcodeforcustomers"></a>
-  </div>
+        <a href="mailto:gizegebeyacompany@gmail.com" class="social-icon"><img src="GMAIL.png" alt="gmail"></a>
+        <a href="https://t.me/gizegebeyacompany" class="social-icon"><img src="Telegram.jpg" alt="TELEGRAM"></a>
+      </div>
+      <div class="qr-codes-footer">
+        <a href="https://gizegebeya.github.io/Gize-Gebeya-Customer-s-website/">
+          <img src="QR CODE FOR CUSTOMERS.png" alt="QR Code for Customers">
+        </a>
+      </div>
     </section>
   </footer>
+
 </body>
 </html>
