--- a/About Us.html
+++ b/About Us.html
@@ -169,6 +169,7 @@
   </section>
 
   <footer>
+    <p>&copy; 2024 Employee Website. All rights reserved.</p>
     <p>Contact us at: Phone: +251978906766 / +251973126041 | Email: gizegebeyacompany@gmail.com</p>
     <div class="social-media">
       <a href="#" class="social-icon"><img src="Youtube.png" alt="YouTube"></a>
