--- a/Home.html
+++ b/Home.html
@@ -167,6 +167,7 @@
     </section>
 
     <footer>
+        <p>&copy; 2024 Employee Website. All rights reserved.</p>
         <p>Contact us at: Phone: +251978906766 / +251973126041 | Email: gizegebeyacompany@gmail.com</p>
         <section>
             <div class="social-media">
