--- a/Blog.html
+++ b/Blog.html
@@ -206,7 +206,7 @@
       <a href="https://www.facebook.com/profile.php?id=61550732175981" class="social-icon"><img src="FACEBOOK.png" alt="facebook"></a>
       <a href="https://t.me/gizegebeyasale" class="social-icon"><img src="Telegram channel.jpg" alt="Telegram"></a>
       <a href="mailto:gizegebeyacompany@gmail.com" class="social-icon"><img src="GMAIL.png" alt="gmail"></a>
-      <a href="https://t.me/gizegebeyacompany" class="social-icon"><img src="Telegram.jpg" alt="TELEGRAM"></a>
+      <a href="https://t.me/Gizegebeysharecompany" class="social-icon"><img src="Telegram.jpg" alt="TELEGRAM"></a>
     </div>
     <div class="qr-codes-footer">
       <a href="https://gizegebeya.github.io/Gize-Gebeya-Customer-s-website/">
